--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </li>
         </ul>
       </nav>
-      <h3 id="icebreakers"><a href="/">Icebreakers</a></h3>
+      <h3><a id="icebreakers" href="/">Icebreakers</a></h3>
     </header>
     <main>
       <div class="jumbotron">
